--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <main>
         <section id="about" class="profile-section">
-            <img src="/api/placeholder/200/200" alt="Profile Photo" class="profile-image">
+            <img src="Photos/pfp.jpg" alt="Profile Photo" class="profile-image">
             <div>
                 <h2>About Me</h2>
                 <p>I am a researcher in the Department of Physics and Astronomy at George Mason University, working under the supervision of Dr. Ferah Munshi. My research focuses on cosmological simulations and dark matter in dwarf galaxies.</p>
