--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
 
         <section id="publications">
             <h2>Publications</h2>
-            <p>[Your publications will be listed here]</p>
+            <p>A MARVEL-ous study of how well galaxy shapes reflect DM halo shapes in CDM (in prep)</p>
         </section>
 
         <section id="contact">
             <h2>Contact Information</h2>
             <p>Department of Physics and Astronomy<br>
             George Mason University<br>
-            [Your Email]<br>
-            [Office Location]</p>
+            bvogel4@gmu.edu<br>
+            Planetary 226 </p>
         </section>
     </main>
 
