--- a/index.html
+++ b/index.html
@@ -21,10 +21,28 @@
         }
 
         header {
-            background-color: var(--primary-color);
-            color: white;
+            background-color: white;
+            color: var(--text-color);
             padding: 2rem;
             text-align: center;
+        }
+
+        .header-content {
+            max-width: 800px;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 2rem;
+        }
+
+        .gmu-logo {
+            max-width: 300px;
+            height: auto;
+        }
+
+        .header-text {
+            text-align: left;
         }
 
         nav {
@@ -72,7 +90,7 @@
         .profile-image {
             width: 200px;
             height: 200px;
-            background: #ddd;
+            object-fit: cover;
             border-radius: 50%;
         }
 
@@ -84,7 +102,16 @@
             margin-top: 2rem;
         }
 
-        @media (max-width: 600px) {
+        @media (max-width: 768px) {
+            .header-content {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .header-text {
+                text-align: center;
+            }
+
             .profile-section {
                 flex-direction: column;
                 align-items: center;
