--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astrophysics Research - George Mason University</title>
+    <title>Blake Keith - Computational Cosmology - George Mason University</title>
     <style>
+        /* [Previous CSS styles remain the same until header section] */
         :root {
             --primary-color: #006633;
             --secondary-color: #FFCC33;
             --text-color: #333;
             --light-bg: #f5f5f5;
         }
-        
+
         body {
             font-family: 'Inter', system-ui, sans-serif;
             line-height: 1.6;
@@ -27,13 +28,25 @@
             text-align: center;
         }
 
+        .researcher-name {
+            font-size: 2.5rem;
+            margin: 0 0 1rem 0;
+            color: var(--primary-color);
+        }
+
+        .research-title {
+            font-size: 1.8rem;
+            margin: 0 0 2rem 0;
+            color: var(--text-color);
+        }
+
         .header-content {
-            max-width: 800px;
+            max-width: 1000px;
             margin: 0 auto;
             display: flex;
             align-items: center;
-            justify-content: space-between;
-            gap: 2rem;
+            justify-content: center;
+            gap: 4rem;
         }
 
         .gmu-logo {
@@ -45,6 +58,7 @@
             text-align: left;
         }
 
+        /* [Rest of the CSS remains the same] */
         nav {
             background-color: var(--secondary-color);
             padding: 1rem;
@@ -106,10 +120,19 @@
             .header-content {
                 flex-direction: column;
                 text-align: center;
+                gap: 2rem;
             }
 
             .header-text {
                 text-align: center;
+            }
+
+            .researcher-name {
+                font-size: 2rem;
+            }
+
+            .research-title {
+                font-size: 1.5rem;
             }
 
             .profile-section {
@@ -121,10 +144,17 @@
 </head>
 <body>
     <header>
-        <h1>Astrophysics Research</h1>
-        <p>George Mason University</p>
+        <h2 class="researcher-name">Blake Keith</h2>
+        <h1 class="research-title">Computational Cosmology & Galaxy Evolution</h1>
+        <div class="header-content">
+            <img src="Photos/Header_logo_George-Mason-University-2024_0.png" alt="George Mason University Logo" class="gmu-logo">
+            <div class="header-text">
+                <p>Department of Physics and Astronomy</p>
+            </div>
+        </div>
     </header>
 
+    <!-- [Rest of the HTML remains the same] -->
     <nav>
         <ul>
             <li><a href="#about">About</a></li>
@@ -139,13 +169,13 @@
             <img src="Photos/pfp.jpg" alt="Profile Photo" class="profile-image">
             <div>
                 <h2>About Me</h2>
-                <p>I am a researcher in the Department of Physics and Astronomy at George Mason University, working under the supervision of Dr. Ferah Munshi. My research focuses on cosmological simulations and dark matter in dwarf galaxies.</p>
+                <p>I am a PhD student in the Department of Physics and Astronomy at George Mason University, working under the supervision of Dr. Ferah Munshi. My research focuses on cosmological simulations and dark matter in dwarf galaxies.</p>
             </div>
         </section>
 
         <section id="research">
             <h2>Current Research Projects</h2>
-            
+
             <div class="project">
                 <h3>3D Shape Analysis of Dwarf Galaxies</h3>
                 <p>Investigating the relationship between stellar and dark matter distributions in dwarf galaxy simulations. Our research demonstrates that the 3D shape of stellar distributions closely traces the underlying dark matter structure, particularly in galaxies lacking a stellar disk.</p>
