--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
         <section id="publications">
             <h2>Publications</h2>
-            <p>A MARVEL-ous study of how well galaxy shapes reflect DM halo shapes in CDM (in prep)</p>
+            <p><a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250116317K/abstract">A MARVEL-ous study of how well galaxy shapes reflect DM halo shapes in CDM</a></p>
         </section>
 
         <section id="contact">
